Fixed alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,10 @@
   width: 100%; 
 }
 
+.portfolio-row {
+  display: flex;
+}
+
 .portfolio-thumb {
   align-items: center;
   text-align: center;
@@ -164,7 +168,6 @@ img {
   max-width: 100%;
   object-fit: contain;
   height: auto;
-  width: 50%;
   padding: 10px;
 }
 
@@ -175,6 +178,10 @@ p {
 
 p.school-summary {
   width: 50%
+}
+
+p.portfolio-summary {
+  width: 80%
 }
 
 html, body {
